# knowledge-bot

./: .gitignore  README.md  mise.toml
lambda/: pyproject.toml
lambda/receiver/: handler.py  requirements.txt
lambda/worker/: handler.py
terraform/: .gitignore
terraform/bootstrap/: .terraform.lock.hcl  main.tf  output.tf  variables.tf
terraform/environments/poc/: .terraform.lock.hcl  backend.tf  main.tf  terraform.tfvars.example  variables.tf
terraform/modules/knowledge-base/: iam.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/slack-bot/: main.tf  variables.tf
