[project]
name = "lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-secretsmanager-caching>=1.1.3",
    "boto3>=1.42.41",
    "slack-sdk>=3.39.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[aws-secretsmanager-caching,secretsmanager,sqs]>=1.42.41",
]
